Fix spacing in About section + change styled-comps icon

--- a/src/components/about.module.scss
+++ b/src/components/about.module.scss
@@ -2,12 +2,14 @@
   height: 100vh;
   background-color: whitesmoke;
   color: rgb(99, 99, 99);
-  padding: 2% 10%;
+  padding: 2% 15%;
+  display: flex;
+  align-content: center;
 }
 
 .grid {
   display: grid;
-  grid-template-rows: auto auto 1fr;
+  grid-template-rows: auto auto auto;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 2%;
   align-content: center;
@@ -24,6 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .headshot {
@@ -45,4 +48,5 @@
 
 .chartContainer {
   grid-column: span 2;
+  justify-content: center;
 }
